2017-10-17  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/ocinumber.c, test/test_oranumber.rb:
	    Add OraNumber#has_fractional_part?.

2017-10-01  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/plthook_elf.c: Update plthook to use prelinked
	    libclntsh.so on Linux.
	    (github issue #172)

2017-09-27  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/oci8lib.c: Change order to load libclntsh when runtime
	    api check is enabled on Unix.

2017-09-24  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/oci8lib.c: Try to load $ORACLE_HOME/lib/libclntsh.so also
	    when runtime api check is enabled on Unix.

2017-09-23  Kubo Takehiro <kubo@jiubao.org>
	* lib/oci8/cursor.rb: Don't call unnecessary __paramGet(i) when a
	    cursor is executed more than once.
	    (pointed by OMOTO Kenji at github issue #171)

2017-07-09  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/apiwrap.yml, ext/oci8/oci8.c, lib/oci8/oci8.rb:
	    Delete unused code using OCILogon2 and OCILogoff.

2017-07-09  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/error.c: Delete OCIError#initialize defined by C code
	    to suppress warning: method redefined; discarding old initialize.
	    (github issue #168)

2017-06-17  Kubo Takehiro <kubo@jiubao.org>
	* NEWS: Add changes between 2.2.4 and 2.2.4.1
	* lib/oci8/version.rb: Update to 2.2.4.1
	* lib/oci8/properties.rb: Fix URL links
	* docs/hanging-after-inactivity.md: Revised

2017-06-16  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/hook_funcs.c, ext/oci8/oci8lib.c:
	    Fix to pass compilation on cygwin.
	* mkpkg-win32.rb: Add tests on cygwin.

2017-06-16  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/hook_funcs.c: Fix the calling convention of setsockopt
	    on Windows x86.

2017-06-11  Kubo Takehiro <kubo@jiubao.org>
	* NEWS: Add changes between 2.2.3 and 2.2.4.
	* lib/oci8/version.rb: update to 2.2.4.
	* docs/ldap-auth-and-function-interposition.md,
	  docs/hanging-after-inactivity.md: updated

2017-06-08  Kubo Takehiro <kubo@jiubao.org>